--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
     <footer id="footer" class="footer">
-        <img src="/images/kakao_friend_900_180.jpg" alt="">
+        <img src="./images/kakao_friend_900_180.jpg" alt="">
     
     </footer> 
 </div>
